--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "connect-livereload": "^0.6.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
