计算模块+请求模块

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/xzfd1010/ES6_Lottery_Ticket#readme",
   "dependencies": {
     "iterlib": "^1.4.0",
-    "jake": "^8.0.15"
+    "jake": "^8.0.15",
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
